Adding my accound btn right side and hover on card

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
            <div class="rightMenu">
                <div class="user">
                    <div class="userImg">&#xe902;</div>
-                   
+                   <div class="myaccount">
+                       <a href="#" class="btn-important">Mon Compte</a>
+                   </div>
                </div>
            </div>
     <div class="container">
@@ -43,6 +45,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -53,6 +56,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -63,6 +67,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -73,6 +78,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -83,6 +89,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -94,6 +101,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -104,6 +112,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -114,6 +123,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -124,6 +134,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -134,6 +145,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -144,6 +156,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -154,6 +167,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -164,6 +178,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -174,6 +189,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -184,6 +200,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -194,6 +211,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -204,6 +222,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -214,6 +233,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -224,6 +244,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -234,6 +255,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -244,6 +266,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -254,6 +277,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -264,6 +288,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
@@ -274,6 +299,7 @@
                         <div class="imgApp">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/thumb.jpg" alt="Preview image">
                         </div>
+                        <div class="cache-image"></div>
                         <div class="titleApp">
                             Ma super app
                         </div>
